# stalmarck

./: .depend  .gitignore  .travis.yml  BoolAux.v  Extract.v  LetP.v  Make  Makefile  Makefile.coq.local  Option.v  OrderedListEq.v  OrderedListEq_ex.v  PolyListAux.v  README  README.md  StalTac.v  StalTac_ex.v  _CoqProject  addArray.v  algoDilemma1.v  algoDotriplet.v  algoDotriplets.v  algoRun.v  algoStalmarck.v  algoTrace.v  complete.v  coq-stalmarck-tactic.opam  coq-stalmarck.opam  default.nix  description  doTriplet.v  doTriplets.v  dune-project  equalBefore.v  interImplement.v  interImplement2.v  interImplement2_ex.v  interState.v  ltState.v  make-release  (+20 more)
.github/workflows/: coq-ci.yml  docker-action.yml  nix-action.yml
checker/: README.md  lexer.mll  parser.mly
extraction/: .cvsignore  .depend  .gitignore  Makefile  README  dune  lexer.mll  main.ml  parser.mly
src/: Extract.v  dune  main.ml  staltac.mlg  staltac_lib.ml  staltac_plugin.mlpack
tactic/: Extract.v  StalTac.v  StalTac_ex.v  dune  staltac.mlg  staltac_lib.ml
tests/: dune
theories/: BoolAux.v  LetP.v  OrderedListEq.v  OrderedListEq_ex.v  PolyListAux.v  StalTac.v  StalTac_ex.v  addArray.v  algoDilemma1.v  algoDotriplet.v  algoDotriplets.v  algoRun.v  algoStalmarck.v  algoTrace.v  complete.v  doTriplet.v  doTriplets.v  dune  equalBefore.v  interImplement.v  interImplement2.v  interImplement2_ex.v  interState.v  ltState.v  makeTriplet.v  memoryImplement.v  normalize.v  rZ.v  refl.v  restrictState.v  sTactic.v  stalmarck.v  state.v  stateDec.v  stateExtra.v  trace.v  triplet.v  unionState.v  wfArray.v
theories/Algorithm/: BoolAux.v  algoDotriplet.v  algoTrace.v  equalBefore.v  interImplement2.v  ltState.v  refl.v  restrictState.v  sTactic.v  state.v  stateDec.v  trace.v  triplet.v  wfArray.v
theories/Tactic/: StalTac.v  dune
