opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/stalmarck"
dev-repo: "git+https://github.com/coq-community/stalmarck.git"
bug-reports: "https://github.com/coq-community/stalmarck/issues"
license: "LGPL-2.1-or-later"

synopsis: "Proof of Stålmarck's algorithm in Coq"
description: """
A two-level approach to prove tautologies using Stålmarck's algorithm in Coq.
"""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.5"}
  "coq" {>= "8.11" & < "8.12~"}
]

tags: [
  "category:Computer Science/Decision Procedures and Certified Algorithms/Decision procedures"
  "category:Miscellaneous/Extracted Programs/Decision procedures"
  "keyword:boolean formula"
  "keyword:tautology checker"
  "logpath:Stalmarck"
]
authors: [
  "Pierre Letouzey"
  "Laurent Théry"
]
