(library
 (name staltac_plugin)
 (public_name coq-stalmarck-tactic.plugin)
 (flags :standard -rectypes -w -3-27-32)
 (modules :standard \ stal)
 (libraries coq-core.plugins.ltac stal))

(coq.pp (modules staltac))

(library
 (name stal)
 (public_name coq-stalmarck-tactic.stal)
 (modules stal))

(coq.extraction
 (prelude Extract)
 (extracted_modules stal)
;(theories Stalmarck.Algorithm)
)

(coq.theory
 (name Stalmarck.Tactic)
 (package coq-stalmarck-tactic)
 (synopsis "Coq tactic based on Stålmarck's algorithm")
 (libraries coq-stalmarck-tactic.plugin)
 (modules :standard \ Extract)
;(theories Stalmarck.Algorithm)
)
